@@ -7,8 +7,12 @@ import net.minecraft.client.particle.ParticleProvider;
 import net.minecraft.client.particle.ParticleRenderType;
 import net.minecraft.client.particle.SpriteSet;
 import net.minecraft.util.Mth;
+import net.minecraft.world.phys.Vec3;
+import rbasamoyai.createbigcannons.effects.particles.ParticleWindHandler;
 
 public class ShrapnelSmokeParticle extends BaseAshSmokeParticle {
+
+	private final Vec3 wind = ParticleWindHandler.getWindForce(0);
 
 	ShrapnelSmokeParticle(ClientLevel level, double x, double y, double z, double dx, double dy, double dz, SpriteSet sprites) {
 		super(level, x, y, z, 0.01f, 0.01f, 0.01f, 0, 0, 0, 1, sprites, 1, 8, -0.05f, true);
@@ -25,6 +29,8 @@ public class ShrapnelSmokeParticle extends BaseAshSmokeParticle {
 	@Override
 	public void tick() {
 		super.tick();
+		float f = this.onGround ? 1 : 0.5f;
+		this.move(this.wind.x * f, this.wind.y, this.wind.z * f);
 		float progress = Mth.clamp((float) this.age / (float) this.lifetime, 0, 1);
 		this.alpha = this.lifetime == 0 || this.age >= this.lifetime ? 0 : 1 - progress * progress * progress;
 	}
